cmake_minimum_required(VERSION 2.6)
project(hive)

# MPI
set(CMAKE_CXX_COMPILER "mpicxx")
set(CMAKE_CXX_FLAGS "-Wall -g -DBHIVEMPI")
# set(CMAKE_CXX_FLAGS "-O3 -DBHIVEMPI")

# set(CMAKE_CXX_FLAGS "-Wall -g")
# set(CMAKE_CXX_FLAGS "-g")


set(SRC_FILES
  src/composer/composer.hh
  src/projects/simpleCell/cartesianGrid/cartesianGrid.cpp
  src/projects/simpleCell/cartesianGrid/cartesianGrid.hh
  src/projects/simpleCell/cartesianGrid/worldFluxMessageClasses.h
  src/projects/simpleCell/cartesianGrid/worldFluxMessageClasses.cpp
  src/projects/simpleCell/cartesianGrid/worldCellTransferMessageClasses.cpp
  src/projects/simpleCell/cartesianGrid/worldCellTransferMessageClasses.h
  src/projects/simpleCell/universe/universe.cpp
  src/projects/simpleCell/universe/universe.hh
  src/projects/simpleCell/universe/universeFluxMessageClasses.cpp
  src/projects/simpleCell/universe/universeFluxMessageClasses.h
  src/projects/simpleCell/bactCell/bactCell.hh
  src/projects/simpleCell/bactCell/bactCell.cpp
  src/projects/simpleCell/bactCell/ecoliSimulator.cpp
  src/projects/simpleCell/composers/SC_composers.cpp
  src/projects/simpleCell/composers/SC_composers.hh
  src/projects/simpleCell/composers/SC_parallelComposers.cpp
  src/projects/simpleCell/composers/SC_parallelComposers.hh
  src/projects/simpleCell/simpleCell.hh
  src/projects/simpleCell/simpleCell.cpp
  src/parallel/parallel.hh
  src/parallel/parallel.cpp
  src/agent/database/database.hh
  src/agent/database/database.cpp
  src/agent/message/message.hh
  src/agent/message/message.cpp
  src/agent/agentFactory/agent_factory.hh
  src/agent/data/grid/grid.hh
  src/agent/data/grid/grid.cpp
  src/agent/data/grid/nvoxel.hh
  src/agent/data/grid/nvoxel.cpp
  src/agent/data/primitive/primitiveData.hh
  src/agent/data/primitive/primitiveData.cpp
  src/agent/data/data.hh
  src/agent/messageGenerator/messagegenerator.hh
  src/agent/special_agent.hh
  src/agent/agent.cpp
  src/agent/agent.hh
  src/agent/special_agent.cpp
  src/agent/action.hh
  src/exception/exception.cpp
  src/exception/exception.hh
  src/input/dataParser/inputdatareader.hh
  src/input/systemParser/inputsystemreader.hh
  src/input/system/system.hh
  src/input/xmlParser/XmlParser.cpp
  src/input/xmlParser/XmlParser.hh
  src/input/xmlExpander/XmlExpander.cpp
  src/input/xmlExpander/XmlExpander.hh
  src/communicator/communicator.cpp
  src/communicator/communicator.hh
  src/output/outputwriter.hh
  src/output/outputwriter.cpp
  src/simulators/simulator.hh
  src/util/nr/nrtypes_lib.h
  src/util/nr/nrutil_mtl.h
  src/util/nr/nrutil_nr.h
  src/util/nr/nrutil.h
  src/util/nr/ran2.cpp
  src/util/nr/ludcmp.cpp
  src/util/nr/nr.h
  src/util/nr/nrutil_val.h
  src/util/nr/nrutil_tnt.h
  src/util/nr/nrtypes_nr.h
  src/util/nr/nrtypes.h
  src/util/xml/TinyXML/tinyxmlerror.cpp
  src/util/xml/TinyXML/tinystr.h
  src/util/xml/TinyXML/tinyxmlparser.cpp
  src/util/xml/TinyXML/tinyxml.cpp
  src/util/xml/TinyXML/tinyxml.h
  src/util/xml/TinyXML/tinystr.cpp
  src/util/matrix/matrix.hh
  src/util/matrix/matrix.cpp
  src/util/rand/MTrand/mtrand.cpp
  src/util/rand/MTrand/mtrand.h
  src/util/rand/rand.hh
  src/util/rand/rand.cpp
  src/util/conversion/conversion.hh
  src/util/conversion/conversion.cpp
  src/util/function/muParser/muParserBase.h
  src/util/function/muParser/muParser.cpp
  src/util/function/muParser/muParserFixes.h
  src/util/function/muParser/muParser.h
  src/util/function/muParser/muParserToken.h
  src/util/function/muParser/muParserError.cpp
  src/util/function/muParser/muParserInt.cpp
  src/util/function/muParser/muParserCallback.cpp
  src/util/function/muParser/muParserBytecode.cpp
  src/util/function/muParser/muParserError.h
  src/util/function/muParser/muParserInt.h
  src/util/function/muParser/muParserCallback.h
  src/util/function/muParser/muParserTokenReader.cpp
  src/util/function/muParser/muParserBytecode.h
  src/util/function/muParser/muParserDef.h
  src/util/function/muParser/muParserComplex.cpp
  src/util/function/muParser/muParserTokenReader.h
  src/util/function/muParser/muParserBase.cpp
  src/util/function/muParser/muParserStack.h
  src/util/function/muParser/muParserComplex.h
  src/util/string/string.hh
  src/util/string/string.cpp
  src/util/sparselib++/coord_double.cc
  src/util/sparselib++/cg.h
  src/util/sparselib++/mvvt.h
  src/util/sparselib++/compcol_double.h
  src/util/sparselib++/qmr.h
  src/util/sparselib++/mvmd.cc
  src/util/sparselib++/mvmd.h
  src/util/sparselib++/mvmtp.h
  src/util/sparselib++/bicg.h
  src/util/sparselib++/mvmf.h
  src/util/sparselib++/ir.h
  src/util/sparselib++/mvvd.cc
  src/util/sparselib++/mvvtp.h
  src/util/sparselib++/iotext.h
  src/util/sparselib++/iohb.c
  src/util/sparselib++/qsort_int.cc
  src/util/sparselib++/iohb.h
  src/util/sparselib++/mvmt.h
  src/util/sparselib++/mvblas.h
  src/util/sparselib++/ilupre_double.cc
  src/util/sparselib++/mvblasd.h
  src/util/sparselib++/icpre_double.h
  src/util/sparselib++/mvblasf.h
  src/util/sparselib++/cheby.h
  src/util/sparselib++/mvblasi.cc
  src/util/sparselib++/qsort_double.cc
  src/util/sparselib++/mvm.h
  src/util/sparselib++/mvmc.cc
  src/util/sparselib++/diagpre_double.h
  src/util/sparselib++/mvvcio.cc
  src/util/sparselib++/comprow_double.h
  src/util/sparselib++/mvblast.h
  src/util/sparselib++/qsort_type.h
  src/util/sparselib++/mvvc.cc
  src/util/sparselib++/spmm.cc
  src/util/sparselib++/mvvc.h
  src/util/sparselib++/tmvec.h
  src/util/sparselib++/spsm.cc
  src/util/sparselib++/ilupre_double.h
  src/util/sparselib++/mvvi.h
  src/util/sparselib++/qsort_int.h
  src/util/sparselib++/mvblasd.cc
  src/util/sparselib++/mvmrf.h
  src/util/sparselib++/icpre_double.cc
  src/util/sparselib++/mvvrf.h
  src/util/sparselib++/qsort_double.h
  src/util/sparselib++/mvmc.h
  src/util/sparselib++/mvvdio.cc
  src/util/sparselib++/mvmf.cc
  src/util/sparselib++/mvvind.h
  src/util/sparselib++/iotext_double.cc
  src/util/sparselib++/tmvmat.h
  src/util/sparselib++/mvmi.h
  src/util/sparselib++/iohb_double.cc
  src/util/sparselib++/iohb_double.h
  src/util/sparselib++/minstr.h
  src/util/sparselib++/mvvf.cc
  src/util/sparselib++/iotext_type.h
  src/util/sparselib++/comprow_double.cc
  src/util/sparselib++/vecdefs.h
  src/util/sparselib++/spblas.h
  src/util/sparselib++/mvblasc.cc
  src/util/sparselib++/mvblasc.h
  src/util/sparselib++/mvblasi.h
  src/util/sparselib++/coord_double.h
  src/util/sparselib++/diagpre_double.cc
  src/util/sparselib++/mvmi.cc
  src/util/sparselib++/iotext_double.h
  src/util/sparselib++/mvv.h
  src/util/sparselib++/mvvd.h
  src/util/sparselib++/cgs.h
  src/util/sparselib++/gmres.h
  src/util/sparselib++/mvvf.h
  src/util/sparselib++/bicgstab.h
  src/util/sparselib++/mvvi.cc
  src/util/sparselib++/compcol_double.cc
  src/util/sparselib++/tblas1.h
  src/util/sparselib++/mvblasf.cc
  src/util/constants/constants.hh
  src/util/util.hh
  src/propagator_class.cpp
  src/hive.hh
  src/propagator_class.hh
  src/hive.cpp
  )

add_executable(hive ${SRC_FILES})
